2007-02-07  Ted Bullock  <tbullock@canada.com>

	* httperf.1: Added correction to man page to include a missing
	--wsess identification

2007-01-26  Ted Bullock  <tbullock@canada.com>

	* getopt.c and getopt1.c: Re-Added the to the build process
	httperf now compiles on Linux, OpenBSD, FreeBSD, Solaris, HP-UX 11i
	with cc and gcc and (with cc and gcc)

2007-01-26  Ted Bullock  <tbullock@canada.com>

	* Makefile.am: Revised Makefile.am for src directories to explicitly include the
	.h files to allow make distcheck to pass

2007-01-26  Ted Bullock  <tbullock@canada.com>

	* getopt.c and getopt1.c: Removed from build process

	* httperf.c: Wrapped call to getopt.h in pre-processor checks

2007-01-25  Ted Bullock  <tbullock@canada.com>

	* wsesslog.c: changed a sprintf call to the more secure snprintf

	* getopt.c: changed a sprintf call to the more secure snprintf

2007-01-20  Ted Bullock  <tbullock@canada.com>

	* autogen.sh: Included the shell script autogen.sh to compile the necessary 
	autotool components.
	
	* autogen.sh: Removed redundant configuration files from CVS, regenerate these
	with the autogen.sh script (recommend autoconf 2.60 and above)

	* ttest.c: Removed the ttest.c file from CVS

2007-01-16  Ted Bullock <tbullock@canada.com>
	* Build System: Updated build system to a more typical directory
	layout and wrote missing makefile.am files for automake

	* idleconn: Now installed along with the httperf executable

	* ttest: Remove program from build

2007-01-02  Ted Bullock <tbullock@canada.com>

	*License: Included openssl linking exception

2006-12-08  Ted Bullock <tbullock@canada.com>
	
	* Bug Fixes: Added a number of fixes from the mailing lists
	over the last 6 years.

	* compiler warnings: Compiler warnings in core.c and wsesslog.c
	
	* configuration: Fixes a problem with the "configure" setup
	where the "--prefix=" option wasn't being obeyed

	* zero length: Fixes bug in http.c (parse_header)with zero
	length content
