@@ -1,7 +1,7 @@
 /*
     httperf -- a tool for measuring web server performance
-    Copyright (C) 2007  Hewlett-Packard Company and Contributors
-    Contributed by David Mosberger-Tang
+    Copyright (C) 2007  Hewlett-Packard Company and Contributors listed in
+    AUTHORS file. Originally contributed by David Mosberger-Tang
 
     This file is part of httperf, a web server performance measurment
     tool.
