@@ -1,5 +1,10 @@
 2007-02-07  Ted Bullock  <tbullock@canada.com>
 
+	* *.c and *.h: Slightly adjusted license to explicitly point out AUTHORS file
+	as official list of authors
+
+2007-02-07  Ted Bullock  <tbullock@canada.com>
+
 	* httperf.1: Added correction to man page to include a missing
 	--wsess identification
 
